# COAST

./: .cursorrules  DEVELOPMENT_CONTEXT.md  TODO.md  max-read.txt
build-laptop/: CMakeCache.txt  Makefile  cmake_install.cmake
build-laptop/TMR/: Makefile  cmake_install.cmake
build-laptop/dataflowProtection/: Makefile  cmake_install.cmake
build-new/: CMakeCache.txt  Makefile  cmake_install.cmake
build-new/TMR/: Makefile  cmake_install.cmake
build-new/dataflowProtection/: Makefile  cmake_install.cmake
projects/: CMakeLists.txt
projects/CFCSS/: CFCSS.cpp  CMakeLists.txt
projects/DWC/: CMakeLists.txt
projects/EDDI/: CMakeLists.txt
projects/TMR/: CMakeLists.txt  TMRNewPM.cpp
projects/dataflowProtection/: CMakeLists.txt  cloning.cpp  dataflowProtection.cpp  dataflowProtection.h  inspection.cpp  interface.cpp  synchronization.cpp  utils.cpp  verification.cpp
projects/debugStatements/: CMakeLists.txt  debugStatements.cpp
projects/exitMarker/: CMakeLists.txt  exitMarker.cpp
projects/smallProfile/: CMakeLists.txt  smallProfile.cpp
tests/max-tests/base/: debug-script.sh  fix-pass.sh  fix.sh  run.sh  test_arithmetic.c  test_arrays.c  test_basic.c  test_loops.c  test_pointers.c  test_recursive.c  tests_runner.sh
